<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="20dp"
  tools:context=".mvc.controller.fragments.ExpenseListFragment">

  <androidx.cardview.widget.CardView
    android:id="@+id/music_track_card_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="10dp"
    android:layout_weight="4"
    app:cardBackgroundColor="@color/general_violet_color"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/txt_transaction_notifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="مبلغ 200,000 تومان برداشت شد"
        android:textColor="@color/white"
        android:textSize="15dp"/>

      <Button
        android:id="@+id/btn_register_transaction"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/simple_border"
        android:text="@string/register_expense_btn_text"
        android:textColor="@color/white"/>

      <Button
        android:id="@+id/btn_ignore_transaction"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/btn_register_transaction"
        android:background="@drawable/simple_border"
        android:text="@string/ignore_expense_btn_text"
        android:textColor="@color/white"/>
    </RelativeLayout>


  </androidx.cardview.widget.CardView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="10dp"
    android:layout_weight="2"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginEnd="5dp"
      android:layout_weight="1"
      android:gravity="center"
      app:cardBackgroundColor="@color/genera_turquoise_color"
      app:cardCornerRadius="7dp"
      app:cardElevation="2dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
          android:id="@+id/prev_month_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:paddingBottom="5dp"
          android:text="@string/last_month_text"
          android:textColor="@color/white"
          android:textSize="16dp"/>

        <TextView
          android:id="@+id/txt_last_month_total_expense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:gravity="center"
          android:text="@string/last_month_total_expense_text"
          android:textColor="@color/white"
          android:textSize="20dp"
          android:textStyle="bold"/>

      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginStart="5dp"
      android:layout_weight="1"
      android:gravity="center"
      app:cardBackgroundColor="@color/genera_turquoise_color"
      app:cardCornerRadius="7dp"
      app:cardElevation="2dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
          android:id="@+id/this_month_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:paddingBottom="5dp"
          android:text="@string/this_month_text"
          android:textColor="@color/white"
          android:textSize="16dp"/>

        <TextView
          android:id="@+id/txt_this_month_total_expense"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:gravity="center"
          android:text="@string/this_month_total_expense"
          android:textColor="@color/white"
          android:textSize="20dp"
          android:textStyle="bold"/>

      </LinearLayout>

    </androidx.cardview.widget.CardView>
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/expenses_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"/>


</LinearLayout>